--- a/src/components/sharePost/sharePost.css
+++ b/src/components/sharePost/sharePost.css
@@ -1,4 +1,5 @@
 .share-container {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
